force-app/main/default/objects/Monthly_Metrics__c/Monthly_Metrics__c.object-meta.xml
<CustomObject>
    <label>Monthly Metrics</label>
    <nameField>
        <label>Monthly Metrics</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>