force-app/main/default/objects/Monthly_Metrics__c/fields/Abandoned_Plans__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Plans__c</fullName>
    <description>Total abandoned plans that completed last month</description>
    <inlineHelpText>Total abandoned plans that completed last month</inlineHelpText>
    <label>Abandoned Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>