force-app/main/default/objects/Monthly_Metrics__c/fields/Active_Not_Yet_Funded_Plans__c.field-meta.xml
<CustomField>
    <fullName>Active_Not_Yet_Funded_Plans__c</fullName>
    <inlineHelpText>Number of current plans that are active but have not yet funded</inlineHelpText>
    <label>Active Not Yet Funded Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>