force-app/main/default/objects/Monthly_Metrics__c/fields/Advisor_Count__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Count__c</fullName>
    <description>Total number of advisors as of 1st of the month</description>
    <inlineHelpText>Total number of advisors as of 1st of the month</inlineHelpText>
    <label>Advisor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>