force-app/main/default/objects/Monthly_Metrics__c/fields/BBB_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>BBB_Review_Score__c</fullName>
    <description>BBB Review score as of the 1st of the month</description>
    <inlineHelpText>BBB Review score as of the 1st of the month</inlineHelpText>
    <label>BBB Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>