force-app/main/default/objects/Monthly_Metrics__c/fields/Builder_Plans__c.field-meta.xml
<CustomField>
    <fullName>Builder_Plans__c</fullName>
    <inlineHelpText>Current number of plans where the service option is Builder</inlineHelpText>
    <label>Builder Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>