force-app/main/default/objects/Monthly_Metrics__c/fields/Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>Cases_Opened__c</fullName>
    <description>Total number of cases opened last month</description>
    <inlineHelpText>Total number of cases opened last month</inlineHelpText>
    <label>Cases Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>