force-app/main/default/objects/Monthly_Metrics__c/fields/Cases_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Cases_Resolved__c</fullName>
    <description>Total number of cases resolved last month</description>
    <inlineHelpText>Total number of cases resolved last month</inlineHelpText>
    <label>Cases Resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>