force-app/main/default/objects/Monthly_Metrics__c/fields/Completed_Onboardings__c.field-meta.xml
<CustomField>
    <fullName>Completed_Onboardings__c</fullName>
    <description>Total number of implementation records marked complete last month</description>
    <inlineHelpText>Total number of implementation records marked complete last month</inlineHelpText>
    <label>Completed Onboardings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>