force-app/main/default/objects/Monthly_Metrics__c/fields/Completed_SK_Onboardings__c.field-meta.xml
<CustomField>
    <fullName>Completed_SK_Onboardings__c</fullName>
    <description>Number of SK+ plans that completed onboarding last month</description>
    <inlineHelpText>Number of SK+ plans that completed onboarding last month</inlineHelpText>
    <label>Completed SK+ Onboardings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>