force-app/main/default/objects/Monthly_Metrics__c/fields/Contract_Terms_401k__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms_401k__c</fullName>
    <description>All contract terms, excluding Single(k), that completed last month.</description>
    <inlineHelpText>All contract terms, excluding Single(k), that completed last month.</inlineHelpText>
    <label>401(k) Contract Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>