force-app/main/default/objects/Monthly_Metrics__c/fields/CSAT_for_the_Period__c.field-meta.xml
<CustomField>
    <fullName>CSAT_for_the_Period__c</fullName>
    <description>Overall client satisfaction for the past month</description>
    <inlineHelpText>Overall client satisfaction for the past month</inlineHelpText>
    <label>CSAT for the Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>