force-app/main/default/objects/Monthly_Metrics__c/fields/Current_Open_CE_Cases__c.field-meta.xml
<CustomField>
    <fullName>Current_Open_CE_Cases__c</fullName>
    <description>Total number of open CE cases as of the 1st of the month</description>
    <inlineHelpText>Total number of open CE cases as of the 1st of the month</inlineHelpText>
    <label>Current Open CE Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>