force-app/main/default/objects/Monthly_Metrics__c/fields/Current_Plan_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Count__c</fullName>
    <description>Total number of plans as of the first of the month that have signed their A4S and have not no-started or transitioned.</description>
    <inlineHelpText>Total number of plans as of the first of the month that have signed their A4S and have not no-started or transitioned.</inlineHelpText>
    <label>Current Plan Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>