force-app/main/default/objects/Monthly_Metrics__c/fields/Custom_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>Custom_k_Plans__c</fullName>
    <inlineHelpText>Current number of plans where the service option is Custom(k)</inlineHelpText>
    <label>Custom(k) Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>