force-app/main/default/objects/Monthly_Metrics__c/fields/Decons__c.field-meta.xml
<CustomField>
    <fullName>Decons__c</fullName>
    <description>Total deconversions that completed last month</description>
    <inlineHelpText>Total deconversions that completed last month</inlineHelpText>
    <label>Decons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>