force-app/main/default/objects/Monthly_Metrics__c/fields/Express_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>Express_k_Plans__c</fullName>
    <description>Total active Express(k) plans as of the first of the month</description>
    <inlineHelpText>Total active Express(k) plans as of the first of the month</inlineHelpText>
    <label>Express(k) Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>