force-app/main/default/objects/Monthly_Metrics__c/fields/First_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_Month__c</fullName>
    <label>First Day of Month</label>
    <type>Date</type>
</CustomField>