force-app/main/default/objects/Monthly_Metrics__c/fields/Franchise_Plans__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Plans__c</fullName>
    <inlineHelpText>Number of plans where the service option is Franchise</inlineHelpText>
    <label>Franchise Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>