force-app/main/default/objects/Monthly_Metrics__c/fields/Full_Service_Imps_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Full_Service_Imps_in_Progress__c</fullName>
    <description>Total number of in-progress full service implementations as of the 1st of the month</description>
    <inlineHelpText>Total number of in-progress full service implementations as of the 1st of the month</inlineHelpText>
    <label>Full Service Imps in Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>