force-app/main/default/objects/Monthly_Metrics__c/fields/Full_Service_No_Starts__c.field-meta.xml
<CustomField>
    <fullName>Full_Service_No_Starts__c</fullName>
    <inlineHelpText>Number of full service no-starts last month</inlineHelpText>
    <label>Full Service No Starts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>