force-app/main/default/objects/Monthly_Metrics__c/fields/Google_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Google_Review_Score__c</fullName>
    <description>Google Review Score as of the 1st of the month</description>
    <label>Google Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>