force-app/main/default/objects/Monthly_Metrics__c/fields/Last_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Month__c</fullName>
    <label>Last Day of Month</label>
    <type>Date</type>
</CustomField>