force-app/main/default/objects/Monthly_Metrics__c/fields/Megaroth_Plans__c.field-meta.xml
<CustomField>
    <fullName>Megaroth_Plans__c</fullName>
    <inlineHelpText>Number of plans where the service option is MegaRoth</inlineHelpText>
    <label>Mega Roth Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>