force-app/main/default/objects/Monthly_Metrics__c/fields/MML_Plans__c.field-meta.xml
<CustomField>
    <fullName>MML_Plans__c</fullName>
    <inlineHelpText>Number of plans where the service option is Custom(k) MML</inlineHelpText>
    <label>MML Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>