force-app/main/default/objects/Monthly_Metrics__c/fields/New_Advisors_Added__c.field-meta.xml
<CustomField>
    <fullName>New_Advisors_Added__c</fullName>
    <description>Number of new advisor contacts added last month</description>
    <inlineHelpText>Number of new advisor contacts added last month</inlineHelpText>
    <label>New Advisors Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>