force-app/main/default/objects/Monthly_Metrics__c/fields/New_Partnerships_Launched__c.field-meta.xml
<CustomField>
    <fullName>New_Partnerships_Launched__c</fullName>
    <description>Number of BD Opportunities that closed with contract last month</description>
    <inlineHelpText>Number of BD Opportunities that closed with contract last month</inlineHelpText>
    <label>New Partnerships Launched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>