force-app/main/default/objects/Monthly_Metrics__c/fields/New_Plan_Sales__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Sales__c</fullName>
    <description>Total number of new plan sales last month</description>
    <inlineHelpText>Total number of new plan sales last month</inlineHelpText>
    <label>New Plan Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>