force-app/main/default/objects/Monthly_Metrics__c/fields/No_Starts_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>No_Starts_Last_Month__c</fullName>
    <label>No Starts Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>