force-app/main/default/objects/Monthly_Metrics__c/fields/Partner_Plans__c.field-meta.xml
<CustomField>
    <fullName>Partner_Plans__c</fullName>
    <inlineHelpText>Number of plans where service option is Partner</inlineHelpText>
    <label>Partner Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>