force-app/main/default/objects/Monthly_Metrics__c/fields/Reserve_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>Reserve_k_Plans__c</fullName>
    <inlineHelpText>Number of plans where the service option is Reserve(k)</inlineHelpText>
    <label>Reserve(k) Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>