force-app/main/default/objects/Monthly_Metrics__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date this record was reviewed for accuracy</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>