force-app/main/default/objects/Monthly_Metrics__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person that reviewed this record for accuracy</description>
    <label>Reviewer</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Monthly Metrics</relationshipLabel>
    <relationshipName>Monthly_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>