force-app/main/default/objects/Monthly_Metrics__c/fields/RKO_Plans__c.field-meta.xml
<CustomField>
    <fullName>RKO_Plans__c</fullName>
    <inlineHelpText>Number of plans where the service option is RK Only</inlineHelpText>
    <label>RKO Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>