force-app/main/default/objects/Monthly_Metrics__c/fields/Saver_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>Saver_k_Plans__c</fullName>
    <description>Total active Saver(k) Plans as of the 1st of the month</description>
    <inlineHelpText>Total active Saver(k) Plans as of the 1st of the month</inlineHelpText>
    <label>Saver(k) Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>