force-app/main/default/objects/Monthly_Metrics__c/fields/Simply_Unbundled_Plans__c.field-meta.xml
<CustomField>
    <fullName>Simply_Unbundled_Plans__c</fullName>
    <description>Total active unbundled Plans as of the 1st of the month</description>
    <inlineHelpText>Total active Unbundled plans as of the 1st of the month</inlineHelpText>
    <label>Simply Unbundled Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>