force-app/main/default/objects/Monthly_Metrics__c/fields/Single_k_Contact_Terms__c.field-meta.xml
<CustomField>
    <fullName>Single_k_Contact_Terms__c</fullName>
    <description>Number of SK contract terms last month</description>
    <inlineHelpText>Number of SK contract terminations last month</inlineHelpText>
    <label>Single(k) Contact Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>