force-app/main/default/objects/Monthly_Metrics__c/fields/Single_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>Single_k_Plans__c</fullName>
    <inlineHelpText>Current number of Single(k) plans</inlineHelpText>
    <label>Single(k) Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>