force-app/main/default/objects/Monthly_Metrics__c/fields/SK_Abandoned_Plans__c.field-meta.xml
<CustomField>
    <fullName>SK_Abandoned_Plans__c</fullName>
    <inlineHelpText>Number of Single(k) Plus Abandoned transitions completed last month</inlineHelpText>
    <label>SK+ Abandoned Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>