force-app/main/default/objects/Monthly_Metrics__c/fields/SK_Decons__c.field-meta.xml
<CustomField>
    <fullName>SK_Decons__c</fullName>
    <inlineHelpText>Number of Single(k) Plus plans that completed deconversion last month</inlineHelpText>
    <label>SK+ Decons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>