force-app/main/default/objects/Monthly_Metrics__c/fields/SK_Imps_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>SK_Imps_in_Progress__c</fullName>
    <description>Number of SK+ plans in the onboarding process</description>
    <label>SK+ Imps in Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>