force-app/main/default/objects/Monthly_Metrics__c/fields/SK_No_Starts__c.field-meta.xml
<CustomField>
    <fullName>SK_No_Starts__c</fullName>
    <inlineHelpText>Number of Single(k) Plus plans that no-started last month</inlineHelpText>
    <label>SK+ No Starts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>