force-app/main/default/objects/Monthly_Metrics__c/fields/SK_Term_Merger__c.field-meta.xml
<CustomField>
    <fullName>SK_Term_Merger__c</fullName>
    <inlineHelpText>Number of Single(k) Plus Term/Merger transitions that completed last month</inlineHelpText>
    <label>SK+ Term Merger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>