force-app/main/default/objects/Monthly_Metrics__c/fields/SK_Transitions_Pending__c.field-meta.xml
<CustomField>
    <fullName>SK_Transitions_Pending__c</fullName>
    <description>Number of SK plans currently transitioning</description>
    <label>SK Transitions Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>