force-app/main/default/objects/Monthly_Metrics__c/fields/SKPlus_Plans__c.field-meta.xml
<CustomField>
    <fullName>SKPlus_Plans__c</fullName>
    <inlineHelpText>Number of plans where the service option is Single(k) Plus</inlineHelpText>
    <label>SK+ Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>