force-app/main/default/objects/Monthly_Metrics__c/fields/SKplus_Terms__c.field-meta.xml
<CustomField>
    <fullName>SKplus_Terms__c</fullName>
    <inlineHelpText>Number of Single(k) Plus terminations that completed last month</inlineHelpText>
    <label>SK+ Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>