force-app/main/default/objects/Monthly_Metrics__c/fields/Starter_Plans__c.field-meta.xml
<CustomField>
    <fullName>Starter_Plans__c</fullName>
    <inlineHelpText>Number of plans where service option is Starter</inlineHelpText>
    <label>Starter Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>