force-app/main/default/objects/Monthly_Metrics__c/fields/Term_Mergers__c.field-meta.xml
<CustomField>
    <fullName>Term_Mergers__c</fullName>
    <description>Total number of Term Mergers that completed last month</description>
    <inlineHelpText>Total number of Term Mergers that completed last month</inlineHelpText>
    <label>Term Mergers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>