force-app/main/default/objects/Monthly_Metrics__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <inlineHelpText>Number of terminations that completed last month</inlineHelpText>
    <label>Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>