force-app/main/default/objects/Monthly_Metrics__c/fields/Total_401_k_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_401_k_Sales__c</fullName>
    <description>Number of 401(k) sales that closed last month</description>
    <label>Total 401(k) Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>