force-app/main/default/objects/Monthly_Metrics__c/fields/Total_PEP_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_PEP_Sales__c</fullName>
    <description>Total number of PEP sales that closed last month</description>
    <label>Total PEP Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>