force-app/main/default/objects/Monthly_Metrics__c/fields/Total_Plan_Billable_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Billable_Headcount__c</fullName>
    <description>Total number of all employees on all plans with over $100.</description>
    <inlineHelpText>Total number of all employees on all plans with over $100.</inlineHelpText>
    <label>Total Plan Billable Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>