force-app/main/default/objects/Monthly_Metrics__c/fields/Total_Single_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>Total_Single_k_Plans__c</fullName>
    <label>Total # of Single(k) Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>