force-app/main/default/objects/Monthly_Metrics__c/fields/Total_Single_k_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Single_k_Sales__c</fullName>
    <description>Total SK plan sales that closed last month</description>
    <label>Total Single(k) Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>