force-app/main/default/objects/Monthly_Metrics__c/fields/Total_Transitions_Completed_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Transitions_Completed_Last_Month__c</fullName>
    <label>Total Transitions Completed Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>