force-app/main/default/objects/Monthly_Metrics__c/fields/Transitions_Pending__c.field-meta.xml
<CustomField>
    <fullName>Transitions_Pending__c</fullName>
    <description>Number of open transition records as of the 1st of the month</description>
    <label>Transitions Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>