force-app/main/default/objects/Monthly_Metrics__c/fields/TrustPilot_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>TrustPilot_Review_Score__c</fullName>
    <description>Score from TrustPilot as of the 1st of the month</description>
    <label>TrustPilot Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>